--- a/templates/gpkg_manager/upload.html
+++ b/templates/gpkg_manager/upload.html
@@ -11,15 +11,55 @@
         <div class="container-fluid" >
             <h1>GeoPackage Uploader</h1>
             <br>
-            <form action="{% url 'geopackage_upload' %}" method="post" enctype="multipart/form-data">
-                {% csrf_token %}
-                {{form.as_p}}
-                <button class="btn btn-primary" type="submit" value="Submit">Upload</button>
-            </form>
+        <div class="well text-muted text-center js-upload-packages" style="padding-top: 4rem; padding-bottom: 4rem;">
+                <span class="glyphicon glyphicon-arrow-down" style="font-size: 4rem;"></span>
+                <h3>Click to Choose Files or Drop Files Here to Upload</h3>
+        </div>
+        {# 2. FILE INPUT TO BE USED BY THE PLUG-IN #}
+        <input id="fileupload" type="file" name="package"
+            style="display: none;"
+            accept=".gpkg, .GPKG"
+            multiple
+            data-url="{% url 'geopackage_upload' %}"
+            data-form-data='{"csrfmiddlewaretoken": "{{ csrf_token }}"}'>
+        </div>
+        <div class="row">
+            <div id="uploaded_list" class="col-md-12">
+                    {% for upload in uploads  %}
+                    <div class="panel-group">
+                        <div class="panel panel-primary">
+                          <div style="display: flex;justify-content: space-between;" class="panel-heading"> <span>{{upload.package_name}} </span> <span>uploaded: {{upload.uploaded_at}}</span> </div>
+                          <div class="panel-body">
+                            <ul class="list-group">
+                                {% for layer in upload.gpkg_manager.get_layers %}
+                                    <li  style="display: flex;" class="list-group-item"><a data-toggle="collapse" href="#actions-{{upload.id}}" style="flex-grow: 1">{{layer.name}}</a><a href="{% url 'geopackage_publish' upload_id=upload.id layername=layer.name %}">publish</a></li>
+                                {% endfor %}
+                            </ul>
+                          </div>
+                        </div>
+                      </div>
+                {% endfor %}
+            </div>
         </div>
     </div>
-
+    <div class="modal fade" id="modal-progress" data-backdrop="static" data-keyboard="false">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h4 class="modal-title">Uploading...</h4>
+                </div>
+                <div class="modal-body">
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 0%;">0%</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
 {% endblock %}
 {% block extra_script %}
-  
+  <script src="{% static 'gpkg_manager/js/jquery.ui.widget.min.js' %}"></script>
+  <script src="{% static 'gpkg_manager/js/jquery.iframe-transport.min.js' %}"></script>
+  <script src="{% static 'gpkg_manager/js/jquery.fileupload.min.js' %}"></script>
+  <script src="{% static 'gpkg_manager/js/upload.js' %}"></script>
  {% endblock %}
