change downloader to download

--- a/templates/gpkg_manager/upload.html
+++ b/templates/gpkg_manager/upload.html
@@ -14,7 +14,7 @@
         <div class="container-fluid" >
             <div class="flex-element flex-space-between equal-area text-center flex-center">
                 <h1 class="text-wrap equal-area text-left">GeoPackage Manager</h1>
-                <button onclick="downloadModal()" class="btn btn-primary">Downloader</button>
+                <button onclick="downloadModal()" class="btn btn-primary">Download</button>
             </div>
             <br>
         <div class="well text-muted text-center js-upload-packages" style="padding-top: 4rem; padding-bottom: 4rem;">
