limit the layer name in template

--- a/templates/gpkg_manager/upload.html
+++ b/templates/gpkg_manager/upload.html
@@ -147,7 +147,7 @@
           <div class="modal-body">
               <div class="form-group">
                   <label for="publishname">Layername:</label>
-                  <input type="text" class="form-control" id="publishname">
+                  <input type="text" maxlength="63" class="form-control" required id="publishname">
               </div>
               <button id="publish-btn" class="btn btn-primary" >Publish</button>
           </div>
