show schema in modal

--- a/templates/gpkg_manager/upload.html
+++ b/templates/gpkg_manager/upload.html
@@ -127,7 +127,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal">&times;</button>
-            <h4 class="modal-title">Compatible Layers</h4>
+            <h4 class="modal-title">Portal Layers</h4>
           </div>
           <div class="modal-body compatible-layers">
             <div class="progress">
@@ -150,6 +150,18 @@
                   <input type="text" maxlength="63" class="form-control" required id="publishname">
               </div>
               <button id="publish-btn" class="btn btn-primary" >Publish</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="modal fade" id="modal-fields" data-backdrop="static" data-keyboard="false">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal">&times;</button>
+            <h4 class="modal-title">Schema</h4>
+          </div>
+          <div class="modal-body" id="schema-body">
           </div>
         </div>
       </div>
